fix textarea elements were way too short

--- a/pops/static/pops/css/style.css
+++ b/pops/static/pops/css/style.css
@@ -6312,7 +6312,6 @@ td.action-checkbox {
 }
 .module textarea {
   width: 90%;
-  height: 5em;
 }
 .action-wrapper .chzn-search {
   display: none;
